# eucworld-dashboard-overlay

./: .bumpversion.cfg  .gitignore  Makefile  README.md  default-layout.xml  editor.sh  process-folder.sh  pyproject.toml  requirements.txt  test-video01.sh  test-video01.xml
docs/: cli-additions.md  euc-components.md  euc-world-guide.md  layout-editor-guide.md  spec-average-speed-components.md  spec-exclusion-zones.md  spec-heading-tape-widget.md  spec-unit-tests.md
docs/xml/examples/: README.md
docs/xml/examples/08-euc-telemetry/: README.md
gopro_overlay/: __version__.py  arguments.py  exclusion.py  execution.py  gpx.py  layout_xml.py  layout_xml_cairo.py  loading.py  timeseries_process.py
gopro_overlay/widgets/: chart.py  heading_tape.py
tests/: test_as_reading.py  test_avg_speed.py  test_cli_additions.py  test_exclusion.py  test_frame_validation.py  test_framemeta.py  test_gpx_euc.py  test_heading_tape.py  test_metric_accessors_euc.py
